--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1120,3 +1120,29 @@ swiper-container {
     border-bottom: 2px solid var(--global-text-color);
   }
 }
+
+
+// Education
+.education {
+  margin-top: 2rem;
+
+  margin-bottom: 2rem;
+  h2 {
+    margin-bottom: 1rem;
+    span {
+      font-size: 1.5rem;
+    }
+  }
+
+  .eduimg{
+    margin-left: 1rem;
+    float: left;
+    width: 70px;
+    margin-right: 2rem;
+  }
+
+  .edutext {
+    height: 85px;
+  }
+
+}
