--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -690,7 +690,9 @@ footer.sticky-bottom {
         abbr {
           display: inline-block;
           background-color: var(--global-theme-color);
-          margin-bottom: 0.5rem;
+          // margin-bottom: 0.5rem;
+          padding-left: 0.5rem;
+          padding-right: 0.5rem;
           width: 100%;
 
           a {
