Revert _base.scss changes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -690,8 +690,7 @@ footer.sticky-bottom {
         abbr {
           display: inline-block;
           background-color: var(--global-theme-color);
-          padding-left: 0.5rem;
-          padding-right: 0.5rem;
+          margin-bottom: 0.5rem;
           width: 100%;
 
           a {
